--- a/_less/font.less
+++ b/_less/font.less
@@ -34,11 +34,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?88hp36');
-	src:url('fonts/icomoon.eot?#iefix88hp36') format('embedded-opentype'),
-		url('fonts/icomoon.woff?88hp36') format('woff'),
-		url('fonts/icomoon.ttf?88hp36') format('truetype'),
-		url('fonts/icomoon.svg?88hp36#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-mn34t6');
+	src:url('fonts/icomoon.eot?#iefix-mn34t6') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-mn34t6') format('woff'),
+		url('fonts/icomoon.ttf?-mn34t6') format('truetype'),
+		url('fonts/icomoon.svg?-mn34t6#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -60,36 +60,64 @@
 .icon-pencil:before {
 	content: "\e609";
 }
+
 .icon-file:before {
 	content: "\e600";
 }
+
 .icon-phone:before {
 	content: "\e601";
 }
+
 .icon-print:before {
 	content: "\e602";
 }
+
 .icon-bubbles:before {
 	content: "\e603";
 }
+
 .icon-wrench:before {
 	content: "\e604";
 }
+
 .icon-cog:before {
 	content: "\e60a";
 }
+
+.icon-wand:before {
+	content: "\e60c";
+}
+
 .icon-menu:before {
 	content: "\e605";
 }
+
+.icon-cloud:before {
+	content: "\e60d";
+}
+
+.icon-star:before {
+	content: "\e60e";
+}
+
+.icon-star2:before {
+	content: "\e60f";
+}
+
 .icon-question:before {
 	content: "\e606";
 }
+
 .icon-info:before {
 	content: "\e60b";
 }
+
 .icon-envelope:before {
 	content: "\e607";
 }
+
 .icon-arrow-right:before {
 	content: "\e608";
 }
+
