--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -2,7 +2,7 @@
 
                                                                 Body Home
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 .styling_home{
@@ -18,11 +18,7 @@ color: #666666;
 
                                                                 Homepage banner
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-
-
-
+  %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 .banner-custom{
     
@@ -60,11 +56,10 @@ border-bottom: 1px solid #fff;
 
                                            Popular Articles Section
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+  %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 /* Popular Articles Links Section */
-
 
 
 .popular-articles-header {
@@ -126,28 +121,20 @@ border-bottom: 1px solid #fff;
 
                                             Categories Section
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
-
-
-/** LEFT SIDE BAR CSS **/
 
 a.link_grey:link{
-
     color: #000000;
 }
 
 
 /* Box Layout */
 
-
 .left-part{        /*icon layout*/
-
     display: table-cell;
     vertical-align: middle;
     text-align: center;
-
-
 }
 
 .middle-part{           /*text layout*/
@@ -158,6 +145,55 @@ a.link_grey:link{
     position: relative;
     display: table-cell;
     vertical-align: middle;
+
+}
+
+.category-heading{
+
+    font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+    color: #666666;
+    margin-left: 20px;
+    letter-spacing: 1px;
+    line-height: 1.5;
+    padding-left: 5px;
+    display: table-cell;
+    position: absolute;
+    top: 8px;
+    left: -188px;
+
+
+   @media (max-width: 1199px){
+                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                left: -140px;
+                                top: 10px;
+
+                             }
+
+
+    @media (max-width: 991px){
+                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                left: -90px;
+                                top: 25px;
+
+                             }
+
+    @media (max-width: 768px){
+                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                left: -100px;
+                                top: 2px;
+
+
+
+                             }
+
+    @media (max-width: 491px){
+
+                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
+                                top: 15px;
+                                left: -75px;
+
+
+                             }
 
 }
 
@@ -253,72 +289,20 @@ a.link_grey:link{
 }
 
 
-
-#category-heading-newb{
-
-    font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
-    margin-left: 20px;
-    letter-spacing: 1px;
-    line-height: 1.5;
-    padding-left: 5px;
-    display: table-cell;
-    position: absolute;
-    top: 8px;
-    left: -188px;
-
-
-   @media (max-width: 1199px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -140px;
-                                top: 10px;
-
-                             }
-
-
-    @media (max-width: 991px){
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -90px;
-                                top: 25px;
-
-                             }
-
-    @media (max-width: 768px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -100px;
-                                top: 2px;
-
-
-
-                             }
-
-    @media (max-width: 491px){
-
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                top: 15px;
-                                left: -75px;
-
-
-                             }
-
-}
-
 /* New to Basespace Hover CSS */
 
 #sidebarmodule-newb:hover{
     
-    background-color: #ffb441;
+    background-color: #328ED1;
     transition-duration: 0.5s;
     border-color: #ffb441;
     
-    
 }
 
-#sidebarmodule-newb:hover #category-heading-newb{
+#sidebarmodule-newb:hover .category-heading{
     
     transition-duration: 0.5s;
     color: #fff;
-    
 
 }
 
@@ -341,12 +325,12 @@ a.link_grey:link{
 }
 
 
-/* Pencil Icon */
+/* New to Bsaespace Icon */
 
 .newb_icon{
     
     font-size: 45px;         
-    color: #ffb441;
+    color: #328ED1;
     display: table-cell;
     position: relative;
     padding-right: 10px;
@@ -413,56 +397,6 @@ a.link_grey:link{
 }
 
 
-
-#category-heading-articles{
-
-    font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
-    margin-left: 20px;
-    letter-spacing: 1px;
-    line-height: 1.5;
-    padding-left: 5px;
-    display: table-cell;
-    position: absolute;
-    top: 8px;
-    left: -188px;
-
-
-   @media (max-width: 1199px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -140px;
-                                top: 10px;
-
-                             }
-
-
-    @media (max-width: 991px){
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -90px;
-                                top: 25px;
-
-                             }
-
-    @media (max-width: 768px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -100px;
-                                top: 2px;
-
-
-
-                             }
-
-    @media (max-width: 491px){
-
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                top: 15px;
-                                left: -75px;
-
-
-                             }
-
-}
-
 /* Articles Hover CSS */
 
 #sidebarmodule-articles:hover{
@@ -471,14 +405,12 @@ a.link_grey:link{
     transition-duration: 0.5s;
     border-color: #ffb441;
     
-    
 }
 
-#sidebarmodule-articles:hover #category-heading-articles{
+#sidebarmodule-articles:hover .category-heading{
     
     transition-duration: 0.5s;
     color: #fff;
-    
 
 }
 
@@ -537,151 +469,9 @@ a.link_grey:link{
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
-                                            Forum Section CSS
-
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-/* Forum Hover CSS */
-
-
-#sidebarmodule-forums{
-
-    border: 2px solid;
-    border-color: #bbbbbb;
-    border-radius: 3px;
-    background-color: #ffffff;
-    display: table;
-    width: 105%;
-    height: 110px;
-
-    padding: 10px;
-    margin-bottom: 25px;
-    position: relative;
-    left: 15px;
-
-     @media (max-width: 768px){
-                                width: 80%;
-                                left: 50px;
-                                height: 90px;
-                             }
-
-    @media (max-width: 460px){
-                                width: 80%;
-                                left: 40px;
-                                height: 90px;
-                             }
-}
-
-#category-heading-forums{
-
-    font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
-    margin-left: 20px;
-    letter-spacing: 1px;
-    line-height: 1.5;
-    padding-left: 5px;
-    display: table-cell;
-    position: absolute;
-    top: 7px;
-    left: -193px;
-
-
-   @media (max-width: 1199px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -140px;
-                                top: 10px;
-
-                             }
-
-
-    @media (max-width: 991px){
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -90px;
-                                top: 25px;
-
-                             }
-
-    @media (max-width: 768px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -100px;
-                                top: 2px;
-
-
-
-                             }
-
-    @media (max-width: 491px){
-
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                top: 15px;
-                                left: -75px;
-
-
-                             }
-
-}
-
-#sidebarmodule-forums:hover{
-
-    background-color: #f9f9f9;
-
-}
-
-#sidebarmodule-forums:hover #category-heading-forums{
-
-
-    transition-duration: 0.5s;
-
-}
-
-#sidebarmodule-forums:hover .forum_icon{
-
-
-
-    transition-duration: 0.5s;
-}
-
-/* Forum Icon */
-
-.forum_icon{
-
-    font-size: 42px;
-    color: #AD73AC;
-    display: table-cell;
-    position: relative;
-    padding-right: 10px;
-    padding-left: 10px;
-
-    @media (max-width: 1199px){
-                                top: 0px;
-                             }
-
-    @media (max-width: 991px){
-                                font-size: 35px;
-                                top: 1px;
-                             }
-
-    @media (max-width: 768px){
-                                top: -2px;
-                                font-size: 35px;
-                             }
-
-    @media (max-width: 491px){
-                                top: -1px;
-                                font-size: 35px;
-                             }
-
-}
-
-
-
-/* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
-
                                            Dev Section CSS
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 #sidebarmodule-dev{
@@ -714,54 +504,6 @@ a.link_grey:link{
     
 }
 
-#category-heading-dev{
-
-    font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
-    margin-left: 20px;
-    letter-spacing: 1px;
-    line-height: 1.5;
-    padding-left: 5px;
-    display: table-cell;
-    position: absolute;
-    top: 7px;
-    left: -190px;
-
-
-    @media (max-width: 1199px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -140px;
-                                top: 10px;
-
-                             }
-
-
-    @media (max-width: 991px){
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -90px;
-                                top: 25px;
-
-                             }
-
-    @media (max-width: 768px){
-                                font: 200 16px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                left: -100px;
-                                top: 2px;
-
-
-
-                             }
-
-    @media (max-width: 491px){
-
-                                font: 200 14px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-                                top: 6px;
-                                left: -75px;
-
-
-                             }
-
-}
 
 #sidebarmodule-dev:hover{
     
@@ -771,7 +513,7 @@ a.link_grey:link{
     
 }
 
-#sidebarmodule-dev:hover #category-heading-dev{
+#sidebarmodule-dev:hover .category-heading{
 
     transition-duration: 0.5s;
     color: #fff;
@@ -836,7 +578,7 @@ a.link_grey:link{
 
                                             ICONS
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 /* Right Caret Icon */
 
@@ -864,7 +606,7 @@ a.link_grey:link{
 
                                             Video Section
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 .video-section{
