--- a/css/style.less
+++ b/css/style.less
@@ -12,7 +12,7 @@
 @import url("accordioncustom.less");
 @import url("landingpage.less");
 @import url("homepage.less");
-@import url("gettingStarted.less");
+@import url("newtobasespace.less");
 @import url("purplebanner.less");
 @import url("lowerbannerhome.less");
 @import url("carousel.less");
