--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -7,9 +7,10 @@
 
 .newb-title {
   margin-bottom: 25px;
-  font: 200 28px/1.2em @font-header, sans-serif;
-  color: @article-color;
+  font: 100 5em @font-header, sans-serif;
+  color: #BE74AE;
   letter-spacing: 1px;
+  margin-top: 0px;
 }
 
 .newb-content {
@@ -19,8 +20,20 @@
     line-height: @line-gap;
 }
 
-.newb-content > p {
-    font-size: 14px;
+.intro-para {
+    font-size: 16px;
+    line-height: 30px;
 }
 
+.intro {
+    border-top: 2px solid #9f9f9f;
+    width: 100%;
+}
 
+#discover-heading {
+  margin-bottom: 25px;
+  font: 100 2em @font-header, sans-serif;
+  color: #666666;
+  letter-spacing: 1px;
+  margin-top: 25px;
+}
