--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -59,7 +59,17 @@ input {
   padding-left: 5px;
 }
 
-.container-fluid-header {               /* Custom container fluid without padding */
+input.gsc-input {
+  border-color: #004220;
+}
+
+input.gsc-search-button {
+  display: none;
+}
+
+
+/* Custom container fluid without padding */
+.container-fluid-header {               
   margin-right: auto;
   margin-left: auto;
 }
@@ -68,6 +78,7 @@ input {
     width: 100%;
     height: 65px;
 }
+
 
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
