--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -130,18 +130,41 @@
 }
 
 .num-circle {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
+  width: 35px;
+  height: 35px;
+  border-radius: 17.5px;
   background: #ffffff;
   border: 1px solid #d4d4d4;
+  font-size: 1.3em;
   text-align: center;
   vertical-align: middle;
+  padding-top: 0.4em;
+  float: left;
+  margin-top: 8px;
+  margin-left: 3%;
 }
+
+.card-title-fold {
+  color: #999999;
+  font-size: 1.65em;
+  padding-left: 3%;
+  float: left;
+  margin-top: 15px;
+} 
 
 .card-step {
   width: 100%;
   border: 1px solid #d4d4d4;
   height: 300px;  
   margin-top: 15px;
+  padding-top: 20px;
 }
+
+.card-title-open {
+  color: #BE74AE;
+  font-size: 1.65em;
+  padding-left: 3%;
+  float: left;
+  margin-top: 15px;
+  padding-top: 0px;
+} 
