base-7321-sections in New to Basespace

--- a/_less/article.less
+++ b/_less/article.less
@@ -35,6 +35,8 @@
     float: left
 }
 
+// @@@@@@@@@@@ SideNav styles  @@@@@@@@@@@
+
 .bs-docs-sidebar {
  /*   text-align: right;*/
     margin-top: 50px;
