--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -16,4 +16,4 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="{{ site.baseurl }}/js/video.js"></script>
 <script src="{{ site.baseurl }}/js/navigation.js"></script>
-<script src="{{ site.baseurl }}/js/gettingstarted.js"></script>
+<script src="{{ site.baseurl }}/js/newtobasespace.js"></script>
