--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -31,82 +31,84 @@
     width: 100%;
     padding-top: 50px;
     padding-bottom: 150px;
-    border-bottom: 2px ridge #cfcfcf;
 }
 
-#discover-heading {
-  font-weight: 100;
-  font-size: 30px;
-  font-family: @font-header;
-  color: #666666;
-  letter-spacing: 1px;
-  margin-bottom: 48px;
-}
+  #discover-heading {
+    font-weight: 100;
+    font-size: 30px;
+    font-family: @font-header;
+    color: #666666;
+    letter-spacing: 1px;
+    margin-bottom: 48px;
+  }
 
-#discover-tabs {
-   overflow:hidden;
-}
+  #discover-tabs {
+     overflow:hidden;
+  }
 
-.tabs {
-   width: 14.5%;
-   padding-bottom: 14.5%;
-   border: 1px solid #bbbbbb;
-   border-radius: 8px;
-   float: left; 
-   margin-right: 2.5%; 
-   position: relative;
-   text-align: center;
-}
+  .tabs {
+     width: 14.5%;
+     padding-bottom: 14.5%;
+     border: 1px solid #bbbbbb;
+     border-radius: 8px;
+     float: left; 
+     margin-right: 2.5%; 
+     position: relative;
+     text-align: center;
+  }
 
-.tab-content {
-   position: absolute;
-   padding-top: 22%;
-   text-align: center; 
-   left: 7%;
-   right: 10%;
-}
+  .tab-content {
+     position: absolute;
+     padding-top: 22%;
+     text-align: center; 
+     left: 7%;
+     right: 10%;
+  }
 
-.tab-title {
-   font: 100 1.2em @font-text;
-   padding-top: 12%;
-}
+  .tab-title {
+     font: 100 1.2em @font-text;
+     padding-top: 12%;
+  }
 
-/* Tabs icons */
+  /* Tabs icons */
 
-.prep_icon {
-   font-size: 4.5em;         
-   color: #BE74AE;
-}
+    .prep_icon {
+       font-size: 4.5em;         
+       color: #BE74AE;
+    }
 
-.run_icon {
-   font-size: 4.5em;         
-   color: #FFB441;
-}
+    .run_icon {
+       font-size: 4.5em;         
+       color: #FFB441;
+    }
 
-.analysis_icon {
-   font-size: 4.5em;         
-   color: #7CA8D4;
-}
+    .analysis_icon {
+       font-size: 4.5em;         
+       color: #7CA8D4;
+    }
 
-.data_icon {
-   font-size: 4.5em;         
-   color: #BAC147;
-}
+    .data_icon {
+       font-size: 4.5em;         
+       color: #BAC147;
+    }
 
-.public_icon {
-   font-size: 4.5em;         
-   color: #FFB441;
-}
+    .public_icon {
+       font-size: 4.5em;         
+       color: #FFB441;
+    }
 
-.apps_icon {
-   font-size: 4.5em;         
-   color: #BE74AE;
-}
+    .apps_icon {
+       font-size: 4.5em;         
+       color: #BE74AE;
+    }
 
 /* Prep section */
 
-.prep-section {
+.big-section {
     padding-top: 50px;
+    border-top: 2px dashed #cfcfcf;
+    margin-top: 60px;
+    padding-bottom: 100px;
 }
 
 .section-title {
@@ -115,56 +117,202 @@
   font-family: @font-header;
   color: #ffb441;
   letter-spacing: 1px;
+  margin-bottom: 40px;
 }
 
-.section-desc {
-  font-size: 14px;
-  line-height: 28px;  
-}
+  .card-fold {
+    background: #F2F2F2;
+    width: 100%;
+    height: 50px;  
+    margin-top: 10px; 
+    padding-left: 3%;
+  }
 
-.card-fold {
-  background: #F2F2F2;
+    .num-circle {
+      width: 35px;
+      height: 35px;
+      border-radius: 17.5px;
+      background: #ffffff;
+      border: 1px solid #d4d4d4;
+      font-size: 1.3em;
+      text-align: center;
+      vertical-align: middle;
+      padding-top: 0.4em;
+      float: left;
+      margin-top: 8px;
+      position: relative;
+    }
+
+    .card-title-fold {
+      color: #999999;
+      font-size: 1.65em;
+      padding-left: 3%;
+      float: left;
+      margin-top: 15px;
+    } 
+
+  .card-step, .card-stack {
+    width: 100%;
+    border: 1px solid #d4d4d4;
+    max-height: 500px;  
+    margin-top: 15px;
+    padding-top: 15px;
+   
+    display: inline-block;
+  }
+
+  .card-container {
+    padding-top: 30px;
+  }
+
+    .card-left {
+      width: 50%;
+      padding-left: 3%;
+      float: left;
+    }
+
+      .card-left-top {
+        margin-bottom: 100px;
+      }
+
+        .card-title {
+          margin-top: -25px;
+          float: left;
+          width: 100%;
+          margin-bottom: 15px;
+        }
+
+          .card-title-open {
+            color: #BE74AE;
+            font-size: 1.65em;
+            margin-top: 15px;
+            padding-top: 0px;
+            position: absolute;
+            padding-left: 5.5%;
+          } 
+
+        .card-desc {
+          font: 100 1.2em @font-text;
+          position: relative;
+          margin-top: 10px;
+        }
+
+      .card-left-bottom {
+        margin-top: 100px;  
+        float: left;
+        border-top: 1px solid #f2f2f2;
+        width: 100%;
+        padding-top: 20px;
+      }
+
+        .card-further-title {
+          font: 100 1.2em @font-text;
+          color: #cccccc;
+        }
+
+        .card-links {
+          padding-left: 3%;
+          list-style-type: none;
+          line-height: 200%;
+          font-size: 1.2em;
+        }
+
+    .card-right {
+      width: 50%;
+      float: left;
+      height: 450px; 
+      padding-right: 2%;
+    }
+
+              
+      #carousel-samples, #carousel-libraries, #carousel-pools {
+        width: parent.width;
+      }
+
+      .card-image {
+        width: parent.width;
+        height: 450px;
+        text-align: center;
+      }
+
+      .card-image > img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+
+      .carousel-caption {
+        margin-left: -18%;
+        margin-bottom: -30px;
+        z-index: 50;
+        background: none;
+        color: #000;
+        font-size: 1.5em;
+        color: #ffb441;
+        text-align:left;
+        text-shadow: none;
+        padding-top: 20px;
+        border-top: 1px solid #E4E4E4;
+      }
+   
+      .carousel-indicators{
+        position: relative;
+        display: block;
+        margin-left: 0px; 
+        left: 0%;
+        text-align: right;
+        width: 100%;
+        padding-right: 5px;
+        margin-top: -5px;
+      }
+
+      .carousel-indicators li{
+        border: 1px solid #ccc;
+        width: 1.2em;
+        height: 1.2em;
+      } 
+
+      .carousel-indicators .active {
+        background-color: #3FA9F5;
+        width: 1.2em;
+        height: 1.2em;
+      }
+
+
+.card-stack-title {
+  margin-top: 0px;
+  float: left;
   width: 100%;
-  height: 50px;  
-  margin-top: 40px; 
+  margin-bottom: 30px;
 }
 
-.num-circle {
-  width: 35px;
-  height: 35px;
-  border-radius: 17.5px;
-  background: #ffffff;
-  border: 1px solid #d4d4d4;
-  font-size: 1.3em;
-  text-align: center;
-  vertical-align: middle;
-  padding-top: 0.4em;
-  float: left;
-  margin-top: 8px;
-  margin-left: 3%;
-}
+  .card-title-open-stack {
+    color: #BE74AE;
+    font-size: 1.65em;
+  } 
 
-.card-title-fold {
-  color: #999999;
-  font-size: 1.65em;
-  padding-left: 3%;
-  float: left;
-  margin-top: 15px;
-} 
+    .card-desc-stack {
+      font: 100 1.2em @font-text;
+    }
 
-.card-step {
+.links-table {
   width: 100%;
-  border: 1px solid #d4d4d4;
-  height: 300px;  
-  margin-top: 15px;
-  padding-top: 20px;
+  border-top: 1px solid #d7d7d7;
+
+  .links-title {
+    color: #ffb441;
+    font-size: 1.65em;
+    padding-left: 3%;
+    padding-top: 25px;
+  }
+
+  .card-links {
+    line-height: 300%;
+  }
+
+  .goto-link {
+    text-align: center;
+    color: @link-color;
+    font-size: 2em;
+  }
 }
 
-.card-title-open {
-  color: #BE74AE;
-  font-size: 1.65em;
-  padding-left: 3%;
-  float: left;
-  margin-top: 15px;
-  padding-top: 0px;
-} 
