base-7403-minor changes

--- a/_less/lowerbannerhome.less
+++ b/_less/lowerbannerhome.less
@@ -8,14 +8,8 @@
 
 .lower_banner{
     
-  border: 1px solid transparent;
+  border-top: 1px solid #dbdada;
   background-color: #ececec;
- /* border-top: solid;
-  border-bottom: solid;
-  border-top-color: #E5EAEE;
-  border-bottom-color: #E5EAEE;
-  border-top-width: 3px;
-  border-bottom-width: 3px; */
   padding-bottom: 100px;
     
     
