--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -13,6 +13,7 @@ body {
   min-height: 65px;
   border: 1px solid transparent;
   background-color: #fff;
+  border-bottom: 1px solid #ededed;
 }
 
 
@@ -56,15 +57,14 @@ body {
 
                                            BASESPACE FOOTER
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 .custom-footer {                   /* Footer CSS */
 
   font:200 14px/1.2em "pt-sans-regular",sans-serif;
-  background-color: #666666;
+  background-color: #bbbbbb;
   color: #ffffff;
   height: 50px;
-
 
 }
 
