--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -538,8 +538,6 @@ a.link_grey:link{
 }
 
 
-
-
 /* Developer Icon */
 
 .developer_icon {
@@ -580,7 +578,6 @@ a.link_grey:link{
 
 /* Right Caret Icon */
 
-
 .caret-right{
 
     font-size: 60px;
@@ -596,7 +593,6 @@ a.link_grey:link{
 
                              }
 
-
 }
 
 
@@ -608,22 +604,17 @@ a.link_grey:link{
 
 
 .video-section{
-    
-    border: 1px solid transparent;
+    border-top: 1px solid #e7e5e5;
     background-color: #f6f6f6;
     padding-bottom: 100px;
-    
-    
 }
 
 .video-heading{
-    
     font: 200 28px/1.2em "HelveticaNeueW01-LtExt",sans-serif;
     color: #ffb441;
     text-align: left;
     letter-spacing: 1px;
     margin-top: 100px;
     margin-bottom: 30px;
-    
 }
 
