sidenav issue fixed

--- a/_layouts/newb.html
+++ b/_layouts/newb.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+hide_welcome_banner: true
 ---
 <!--  Breadcrumb bar  -->
 {% include article-breadcrumbs.html %}
@@ -8,8 +9,6 @@ layout: default
   <!--  Row begins  -->
   <div class="row">
   
-    <!--Side Nav Bar  -->
-    <nav class="col-xs-2 bs-docs-sidebar" align="right">
     <!-- Side Nav Bar -->
       <nav class="bs-docs-sidebar">
         {% if page.headings and page.headings.size > 0 %}
