New graphics and icons uploaded

--- a/_less/font.less
+++ b/_less/font.less
@@ -34,11 +34,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-mn34t6');
-	src:url('fonts/icomoon.eot?#iefix-mn34t6') format('embedded-opentype'),
-		url('fonts/icomoon.woff?-mn34t6') format('woff'),
-		url('fonts/icomoon.ttf?-mn34t6') format('truetype'),
-		url('fonts/icomoon.svg?-mn34t6#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?-waefil');
+	src:url('fonts/icomoon.eot?#iefix-waefil') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-waefil') format('woff'),
+		url('fonts/icomoon.ttf?-waefil') format('truetype'),
+		url('fonts/icomoon.svg?-waefil#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -57,8 +57,44 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-data-management:before {
+	content: "\e610";
+}
+
+.icon-analysis-report:before {
+	content: "\e611";
+}
+
+.icon-apps:before {
+	content: "\e612";
+}
+
+.icon-article:before {
+	content: "\e613";
+}
+
+.icon-getting-started:before {
+	content: "\e614";
+}
+
+.icon-lab:before {
+	content: "\e615";
+}
+
+.icon-public-data:before {
+	content: "\e616";
+}
+
+.icon-run:before {
+	content: "\e617";
+}
+
 .icon-pencil:before {
 	content: "\e609";
+}
+
+.icon-profile:before {
+	content: "\e618";
 }
 
 .icon-file:before {
