--- a/_less/font.less
+++ b/_less/font.less
@@ -34,11 +34,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?-waefil');
-	src:url('fonts/icomoon.eot?#iefix-waefil') format('embedded-opentype'),
-		url('fonts/icomoon.woff?-waefil') format('woff'),
-		url('fonts/icomoon.ttf?-waefil') format('truetype'),
-		url('fonts/icomoon.svg?-waefil#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?bhzuh8');
+	src:url('fonts/icomoon.eot?#iefixbhzuh8') format('embedded-opentype'),
+		url('fonts/icomoon.woff?bhzuh8') format('woff'),
+		url('fonts/icomoon.ttf?bhzuh8') format('truetype'),
+		url('fonts/icomoon.svg?bhzuh8#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -57,6 +57,56 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-getting-started .path1:before {
+	content: "\e60c";
+	color: rgb(0, 0, 0);
+}
+.icon-getting-started .path2:before {
+	content: "\e60e";
+	margin-left: -1em;
+	color: rgb(255, 255, 255);
+}
+.icon-getting-started .path3:before {
+	content: "\e60f";
+	margin-left: -1em;
+	color: rgb(0, 0, 0);
+}
+.icon-getting-started .path4:before {
+	content: "\e614";
+	margin-left: -1em;
+	color: rgb(255, 255, 255);
+}
+.icon-getting-started .path5:before {
+	content: "\e619";
+	margin-left: -1em;
+	color: rgb(0, 0, 0);
+}
+.icon-getting-started .path6:before {
+	content: "\e61a";
+	margin-left: -1em;
+	color: rgb(255, 255, 255);
+}
+.icon-getting-started .path7:before {
+	content: "\e61b";
+	margin-left: -1em;
+	color: rgb(0, 0, 0);
+}
+.icon-getting-started .path8:before {
+	content: "\e61c";
+	margin-left: -1em;
+	color: rgb(255, 255, 255);
+}
+.icon-getting-started .path9:before {
+	content: "\e61d";
+	margin-left: -1em;
+	color: rgb(0, 0, 0);
+}
+.icon-getting-started .path10:before {
+	content: "\e61e";
+	margin-left: -1em;
+	color: rgb(0, 0, 0);
+}
+
 .icon-data-management:before {
 	content: "\e610";
 }
@@ -71,10 +121,6 @@
 
 .icon-article:before {
 	content: "\e613";
-}
-
-.icon-getting-started:before {
-	content: "\e614";
 }
 
 .icon-lab:before {
@@ -121,8 +167,8 @@
 	content: "\e60a";
 }
 
-.icon-wand:before {
-	content: "\e60c";
+.icon-switch:before {
+	content: "\e61f";
 }
 
 .icon-menu:before {
@@ -131,14 +177,6 @@
 
 .icon-cloud:before {
 	content: "\e60d";
-}
-
-.icon-star:before {
-	content: "\e60e";
-}
-
-.icon-star2:before {
-	content: "\e60f";
 }
 
 .icon-question:before {
