icon class names edited

--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -72,32 +72,32 @@
 
   /* Tabs icons */
 
-    .prep_icon {
+    .prep-icon {
        font-size: 4.5em;         
        color: #BE74AE;
     }
 
-    .run_icon {
+    .run-icon {
        font-size: 4.5em;         
        color: #FFB441;
     }
 
-    .analysis_icon {
+    .analysis-icon {
        font-size: 4.5em;         
        color: #7CA8D4;
     }
 
-    .data_icon {
+    .data-icon {
        font-size: 4.5em;         
        color: #BAC147;
     }
 
-    .public_icon {
+    .public-icon {
        font-size: 4.5em;         
        color: #FFB441;
     }
 
-    .apps_icon {
+    .apps-icon {
        font-size: 4.5em;         
        color: #BE74AE;
     }
