Further reading links added

--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -587,7 +587,7 @@ a.link_grey:hover {
 }
 
 .video-heading{
-    font: 200 28px/1.2em "HelveticaNeueW01-LtExt",sans-serif;
+    font: 200 28px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
     color: #ffb441;
     text-align: left;
     letter-spacing: 1px;
