--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -298,6 +298,10 @@
   width: 100%;
   border-top: 1px solid #d7d7d7;
 
+  tr > td {
+    vertical-align: top;
+  }
+
   .links-title {
     color: #ffb441;
     font-size: 1.65em;
