gradient dividers added

--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -30,7 +30,6 @@
     border-top: 2px solid #9f9f9f;
     width: 100%;
     padding-top: 50px;
-    padding-bottom: 150px;
 }
 
   #discover-heading {
@@ -106,9 +105,6 @@
 
 .big-section {
     padding-top: 50px;
-    border-top: 2px dashed #cfcfcf;
-    margin-top: 60px;
-    padding-bottom: 100px;
 }
 
 .section-title {
@@ -320,3 +316,15 @@
   }
 }
 
+.gradient-divider {
+  height: 50px;
+  width: 100%;
+  margin-top: 150px;
+
+  background-color:rgba(199, 199, 199, 0.2);
+  background-image: -moz-radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%);
+  background-image: -webkit-radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%);
+  background-image: -o-radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%);
+  background-image: -ms-radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%);
+  background-image: radial-gradient(50% 100%, ellipse farthest-corner, rgba(199, 199, 199, 0.4), #ffffff 76%)
+}
