Other bugs fixed
- carousel dots issue fixed
- links section issue fixed
- accordion articles re-order complete
- footer color update
- tabs updated

--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -38,11 +38,13 @@
     font-family: @font-header;
     color: #666666;
     letter-spacing: 1px;
-    margin-bottom: 48px;
+    margin-bottom: 50px;
   }
 
   #discover-tabs {
      overflow:hidden;
+     text-align: center;
+     margin-top: 65px;
   }
 
   .tabs {
@@ -50,7 +52,7 @@
      padding-bottom: 14.5%;
      border: 1px solid #bbbbbb;
      border-radius: 8px;
-     float: left; 
+     display: inline-block; 
      margin-right: 2.5%; 
      position: relative;
      text-align: center;
