--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -89,27 +89,27 @@ input.gsc-search-button {
    &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 .custom-footer {                   /* Footer CSS */
-
   font:200 14px/1.2em "pt-sans-regular",sans-serif;
-  background-color: #bbbbbb;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #666666;
   height: 50px;
-
+  border-top: 1px solid #bbbbbb;
 }
 
 .footer-holder {
-
-    text-align: right;
-    margin-bottom: 0px;
-
+  text-align: right;
+  margin-bottom: 0px;
 }
 
 .footer-list {
+  display: inline-block;
+  line-height: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
- display: inline-block;
- line-height: 50px;
- padding-left: 20px;
- padding-right: 20px;
+/* Contribute Github */
 
-
+.contribute-github-content {
+    margin-left: 30px;
 }
