discover tabs hover effects

--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -69,6 +69,7 @@
   .tab-title {
      font: 100 1.2em @font-text;
      padding-top: 12%;
+     color: @font-color;
   }
 
   /* Tabs icons */
@@ -102,6 +103,93 @@
        font-size: 4.5em;         
        color: #BE74AE;
     }
+
+  /* tabs hover effects */
+
+  #prep-tab:hover {
+    background-color: #BE74AE;
+    transition-duration: 0.5s;
+    border-color: #BE74AE;
+  }
+
+    #prep-tab:hover .prep-icon{
+      color: #FFFFFF;
+    }
+
+    #prep-tab:hover .tab-title{
+      color: #FFFFFF;
+    }
+
+  #run-tab:hover {
+    background-color: #FFB441;
+    transition-duration: 0.5s;
+    border-color: #FFB441;
+  }
+
+    #run-tab:hover .run-icon{
+      color: #FFFFFF;
+    }
+
+    #run-tab:hover .tab-title{
+      color: #FFFFFF;
+    }
+
+  #analysis-tab:hover {
+    background-color: #7CA8D4;
+    transition-duration: 0.5s;
+    border-color: #7CA8D4;
+  }
+
+    #analysis-tab:hover .analysis-icon{
+      color: #FFFFFF;
+    }
+
+    #analysis-tab:hover .tab-title{
+      color: #FFFFFF;
+    }
+
+  #data-tab:hover {
+    background-color: #BAC147;
+    transition-duration: 0.5s;
+    border-color: #BAC147;
+  }
+
+    #data-tab:hover .data-icon{
+      color: #FFFFFF;
+    }
+
+    #data-tab:hover .tab-title{
+      color: #FFFFFF;
+    } 
+
+  #public-tab:hover {
+    background-color: #FFB441;
+    transition-duration: 0.5s;
+    border-color: #FFB441;
+  }
+
+    #public-tab:hover .public-icon{
+      color: #FFFFFF;
+    }
+
+    #public-tab:hover .tab-title{
+      color: #FFFFFF;
+    }
+
+  #apps-tab:hover {
+    background-color: #BE74AE;
+    transition-duration: 0.5s;
+    border-color: #BE74AE;
+  }
+
+    #apps-tab:hover .apps-icon{
+      color: #FFFFFF;
+    }
+
+    #apps-tab:hover .tab-title{
+      color: #FFFFFF;
+    }
+
 
 /* Prep section */
 
