Logo and font update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,13 @@
 
 		  	<!-- header -->
 		  	<div class="header navbar-fixed-top">
-		  	    <a class="header-brand-baseSpace" href="{{ site.baseurl }}/">BaseSpace HelpCenter</span></a> 
+		  	    <a class="header-brand-baseSpace" href="{{ site.baseurl }}/"><b>BaseSpace</b><sup><sup>&reg;</sup></sup> HelpCenter</a> 
 		  	    
-		  	    <a class="header-brand-illumina" href="http://www.illumina.com/">illumina</span></a> 
-		  	   <div id="custom_search">
+		  	    <a href="http://www.illumina.com/" target="_newtab">
+		  	    	<div class="header-brand-illumina" src="/images/ILLUMINA_LOGO.png"></div>
+		  	    </a> 
+		  	    
+		  	    <div id="custom_search">
 		  	    	<form id="searchbox_010275296426726970113:l7dpr8y7y3m" method="get" action="{{ site.baseurl }}/articles/searchresults/">
 					    <input value="010275296426726970113:l7dpr8y7y3m" name="cx" type="hidden"/>
 					    <input value="FORID:11" name="cof" type="hidden"/>
