--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -27,18 +27,23 @@ body {
   padding-top: 15px;
   font: 200 22px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
   color: #666666;
+
+  sup {
+    font-size: 8px;
+  }
 }
 
 .header-brand-illumina {
   float: right;
-  padding-right: 30px;
-  height: 50px;
-  line-height: 20px;
-  padding-top: 15px;
-  font: 200 22px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-  color: #666666;
   position: relative;
+  background-image: url("/images/ILLUMINA_LOGO.png");
+  background-repeat: no-repeat;
+  width: 100px;
+  height: 40px;
+  background-size: 100% auto;
+  margin: 15px 15px 0px 15px;
 }
+
 
 /* Google search box */
 #googlecse {
