Fixing 'Arial' font and <li> tags in popular articles

--- a/_less/accordioncustom.less
+++ b/_less/accordioncustom.less
@@ -75,7 +75,7 @@
 /* Accordion Link */
   .accordion-link{
       
-      font:200 14px/1.2em "helvetica","ariel",sans-serif;
+      font:200 14px/1.2em "helvetica","Arial",sans-serif;
       line-height: 35px;
      
   }
