--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -103,15 +103,15 @@ border-bottom: 1px solid #fff;
 }
 
 .popular-article-link{
-
+    font:200 14px/1.2em "helvetica","Arial",sans-serif;
+    line-height: 35px;
     margin-bottom: 17px;
-
 }
 
 .popular-article-ol{
 
     list-style-type: none;
-    padding-top: 10px;
+    padding-top: 5px;
     position: relative;
 
 }
