--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -52,6 +52,9 @@ border-bottom: 1px solid #fff;
     
 }
 
+.home-main-section {
+    margin-bottom: 40px;
+}
 
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
@@ -69,7 +72,7 @@ border-bottom: 1px solid #fff;
  
     font: 200 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
     color: #ffb441;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     position: relative;
     left: 40px;
 
@@ -105,13 +108,12 @@ border-bottom: 1px solid #fff;
 .popular-article-link{
     font:200 14px/1.2em "helvetica","Arial",sans-serif;
     line-height: 35px;
-    margin-bottom: 17px;
+    margin-bottom: 30px;
 }
 
 .popular-article-ol{
 
     list-style-type: none;
-    padding-top: 5px;
     position: relative;
 
 }
