--- a/_less/accordioncustom.less
+++ b/_less/accordioncustom.less
@@ -65,7 +65,7 @@
   }
 
   .toggle-icon {
-    color:#FFB541;
+    color:@earth-pumpkin-color;
     position: absolute;
     padding: 5px 0px 0px 0px;
     cursor: pointer; 
