--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -33,6 +33,10 @@ body {
   }
 }
 
+.header-brand-baseSpace:hover {
+  text-decoration: none;
+}
+
 .header-brand-illumina {
   float: right;
   position: relative;
