--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -71,7 +71,7 @@ border-bottom: 1px solid #fff;
 .popular-articles-header {
  
     font: 200 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
+    color: @earth-pumpkin-color;
     margin-bottom: 20px;
     position: relative;
     left: 40px;
@@ -183,28 +183,28 @@ a.link_grey:hover {
 
     .description-part{
 
-        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+        font: 200 11px/1.2em "Helvetica","Arial",sans-serif;
         color: #bbbbbb;
         
         
             @media (max-width: 1199px){
-                                        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+                                        font: 200 11px/1.2em "Helvetica","Arial",sans-serif;
                                         
                                       }
 
             @media (max-width: 991px){
-                                        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+                                        font: 200 11px/1.2em "Helvetica","Arial",sans-serif;
                                        
                                         
                                      }
 
             @media (max-width: 768px){
-                                        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+                                        font: 200 11px/1.2em "Helvetica","Arial",sans-serif;
                                       
                                      }
 
             @media (max-width: 491px){
-                                        font: 200 11px/1.2em "pt-sans-regular",sans-serif;
+                                        font: 200 11px/1.2em "Helvetica","Arial",sans-serif;
                                         display: none;
                                      }
 
@@ -590,11 +590,15 @@ a.link_grey:hover {
 
 .video-heading{
     font: 200 28px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
+    color: @earth-pumpkin-color;
     text-align: left;
     letter-spacing: 1px;
     margin-top: 100px;
     margin-bottom: 30px;
+}
+
+.video-desc {
+    font-size: 14px;
 }
 
 .video-container {
