--- a/_less/lowerbannerhome.less
+++ b/_less/lowerbannerhome.less
@@ -97,7 +97,7 @@
 .banner_heading{
     
     font:200 28px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
+    color: @earth-pumpkin-color;
     text-align: left;
     margin-top: 10px;
     margin-bottom: 35px;
