--- a/_less/newtobasespace.less
+++ b/_less/newtobasespace.less
@@ -201,7 +201,7 @@
   font-weight: 100;
   font-size: 30px;
   font-family: @font-header;
-  color: #ffb441;
+  color: @earth-pumpkin-color;
   letter-spacing: 1px;
   margin-bottom: 40px;
 }
