--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,14 @@
 		  	    	<div class="header-brand-illumina" src="/images/ILLUMINA_LOGO.png"></div>
 		  	    </a> 
 		  	    
+		  	    <!-- Hiding search temporarily
 		  	    <div id="custom_search">
 		  	    	<form id="searchbox_010275296426726970113:l7dpr8y7y3m" method="get" action="{{ site.baseurl }}/articles/searchresults/">
 					    <input value="010275296426726970113:l7dpr8y7y3m" name="cx" type="hidden"/>
 					    <input value="FORID:11" name="cof" type="hidden"/>
 					    <input id="q" name="q" size="75" type="text" value="" placeholder="Search BaseSpace Help ...."/>
 					</form> 
-					
-		  	    </div> 
+				</div> -->
 		  	    
 		   	</div> 
 		   	<!--header ends-->
