--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -25,17 +25,18 @@ color: #666666;
 .banner-custom{
     
 text-align: left;
-height: 160px;
+height: 250px;
+background-image: url(http://res.illumina.com/images/rgh/hero/childpageheader-prpl240-v2.jpg);
 
 }
 
 .banner-title{
     
 font-family: "HelveticaNeueW01-ThinEx 710288", sans-serif !important;
-color: #666666; 
-font-size: 42px;
+color: #fff; 
+font-size: 52px;
 font-weight: 100;
-margin-top: 50px;
+margin-top: 95px;
 position: relative;
 left: 40px;
     
